# erp-system

./: .env.example  .gitignore  .gitkeep_docs  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: constants.py  database.py  settings.py
src/core/: decorators.py  exceptions.py
src/database/: models.py
src/repositories/: base_repository.py  inventory_repository.py  product_repository.py  sales_repository.py  user_repository.py
src/services/: auth_service.py  product_service.py
tests/: test_auth_service.py
